// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GoogleLoader> that wrapps a map and makes sure google API is loaded should render a spinner while loading 1`] = `
<GoogleLoader
  apiKey="AIzaSyA61aDjG48kvpwLhP-uE0sFSuHQ_j3EIwM"
  loadErrorMessage="An error occured"
>
  <LoadingSpinner
    centerIn="parent"
    context="brand"
    hidden={false}
    size={null}
  >
    <div
      aria-busy={true}
      aria-hidden={false}
      className="LoadingSpinner LoadingSpinner--centerIn_parent"
      role="status"
    >
      <svg
        className="LoadingSpinner__svg"
        style={null}
        viewBox={
          Array [
            0,
            0,
            44,
            44,
          ]
        }
      >
        <circle
          className="LoadingSpinner__path LoadingSpinner__path--context_brand"
          cx="22"
          cy="22"
          fill="none"
          r="20"
          strokeWidth="4"
        />
      </svg>
    </div>
  </LoadingSpinner>
</GoogleLoader>
`;

exports[`<GoogleLoader> that wrapps a map and makes sure google API is loaded should render correctly when finished loading 1`] = `
<GoogleLoader
  apiKey="AIzaSyA61aDjG48kvpwLhP-uE0sFSuHQ_j3EIwM"
  loadErrorMessage="An error occured"
>
  <div>
    A map
  </div>
</GoogleLoader>
`;

exports[`<GoogleLoader> that wrapps a map and makes sure google API is loaded should render error message if loading failed 1`] = `
<GoogleLoader
  apiKey="AIzaSyA61aDjG48kvpwLhP-uE0sFSuHQ_j3EIwM"
  loadErrorMessage="An error occured"
>
  <div>
    An error occured
  </div>
</GoogleLoader>
`;
